--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: rastreador-gastos
+    name: rastreador-de-gastos-personal 
     runtime: node
     plan: free
     region: oregon
@@ -10,7 +10,7 @@ services:
       - key: NODE_ENV
         value: production
       - key: PORT
-        value: 3000
+        value: 8080
     healthCheckPath: /
     autoDeploy: true
 
@@ -30,7 +30,7 @@ envVarGroups:
   - name: app-settings
     envVars:
       - key: API_URL
-        value: https://rastreador-gastos.onrender.com/api
+        value: https://rastreador-de-gastos-personal.onrender.com/api
       - key: DATABASE_URL
         fromDatabase:
           name: rastreador-gastos-db
