--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     region: oregon
     buildCommand: npm install && npm run build
-    startCommand: npm run build
+    startCommand: npm run dev
     envVars:
       - key: NODE_ENV
         value: production
